Changed CSS to make site more responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ACS CUPPS Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="container">
 
 
 
@@ -18,6 +18,13 @@
             <li><a href="#users"><img class="side-nav" src="./images/users.png"></a></li>
             <li><a href="#settings"><img class="side-nav" src="./images/settings.png"></a></li>
         </ul>
+    </nav>
+
+
+
+    <nav id="topbar">
+        <img src="">
+        
     </nav>
 
 
@@ -92,36 +99,34 @@
 
 
         <div class="vertical-2">
-            <div>
-                <div>
+            <div class="device-colors-boxes">
+                <div class="top-stuff">
                     <h3>Devices</h3>
-                    <p>Green - Online</p>
-                    <div>
-                        <p>1000</p>
-                        <p> | </p>
-                        <p>100%</p>
-                    </div>
-                    <p>Red - Online</p>
-                    <div>
-                        <p>1000</p>
-                        <p> | </p>
-                        <p>100%</p>
-                    </div>
-                    <p>Yellow - Media</p>
-                    <div>
-                        <p>1000</p>
-                        <p> | </p>
-                        <p>100%</p>
-                    </div>
-                    <p>Blue - Unknown</p>
-                    <div>
-                        <p>1000</p>
-                        <p> | </p>
-                        <p>100%</p>
-                    </div>
                 </div>
+
+                <p>Green - Online</p>
                 <div>
-                    <chart></chart>
+                    <p>1000</p>
+                    <p> | </p>
+                    <p>100%</p>
+                </div>
+                <p>Red - Online</p>
+                <div>
+                    <p>1000</p>
+                    <p> | </p>
+                    <p>100%</p>
+                </div>
+                <p>Yellow - Media</p>
+                <div>
+                    <p>1000</p>
+                    <p> | </p>
+                    <p>100%</p>
+                </div>
+                <p>Blue - Unknown</p>
+                <div>
+                    <p>1000</p>
+                    <p> | </p>
+                    <p>100%</p>
                 </div>
             </div>
 
@@ -130,25 +135,25 @@
             <div class="members-box">
                 <h3>Members</h3>
                 <button>></button>
-                <div class="member-1">
-                    <img src="" alt="Profile picture">
-                    <p>Name1</p>
+                <div class="member-1 user">
+                    <img src="./images/avatar1.png" alt="Profile picture">
+                    <p>Joe D.</p>
                 </div>
-                <div class="member-2">
-                    <img src="" alt="Profile picture">
-                    <p>Name2</p>
+                <div class="member-2 user">
+                    <img src="./images/avatar1.png" alt="Profile picture">
+                    <p>Dan N.</p>
                 </div>
-                <div class="member-3">
-                    <img src="" alt="Profile picture">
-                    <p>Name3</p>
+                <div class="member-3 user">
+                    <img src="./images/avatar1.png" alt="Profile picture">
+                    <p>Thomas S.</p>
                 </div>
-                <div class="member-4">
-                    <img src="" alt="Profile picture">
-                    <p>Name4</p>
+                <div class="member-4 user">
+                    <img src="./images/avatar1.png" alt="Profile picture">
+                    <p>Randall S.</p>
                 </div>
-                <div class="member-5">
-                    <img src="" alt="Profile picture">
-                    <p>Name5</p>
+                <div class="member-5 user">
+                    <img src="./images/avatar1.png" alt="Profile picture">
+                    <p>Sal M.</p>
                 </div>
             </div>
 
