Added CSS to position and color device counter boxes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="device-chart-box">
                 <div class="top-material">
                     <h3>Devices</h3>
-                    <button>></button>
+                    <button class="button-1">></button>
                 </div>
 
                 <div class="bottom-material">
@@ -102,32 +102,43 @@
             <div class="device-colors-boxes">
                 <div class="top-stuff">
                     <h3>Devices</h3>
+                    <button class="button-2">></button>
                 </div>
 
-                <p>Green - Online</p>
-                <div>
-                    <p>1000</p>
-                    <p> | </p>
-                    <p>100%</p>
+
+                <div class="color-boxes">
+                    <div class="row-1">
+                        <div class="green-box colorful-box" id="greenie">
+                            <p class="box-title" id="green-box-title">Online</p>
+                            <p class="box-content">1000</p>
+                            <p class="box-content"> | </p>
+                            <p class="box-content">100%</p>
+                        </div>
+                        <div class="red-box colorful-box">
+                            <p class="box-title" id="red-box-title">Offline</p>
+                            <p class="box-content">30</p>
+                            <p class="box-content"> | </p>
+                            <p class="box-content">10%</p>
+                        </div>
+                    </div>
+                    <div class="row-2">
+                        <div class="yellow-box colorful-box">
+                            <p class="box-title" id="yellow-box-title">Media</p>
+                            <p class="box-content">400</p>
+                            <p class="box-content"> | </p>
+                            <p class="box-content">40%</p>
+                        </div>
+                        <div class="blue-box colorful-box">
+                            <p class="box-title" id="blue-box-title">Unknown</p>
+                            <p class="box-content">203</p>
+                            <p class="box-content"> | </p>
+                            <p class="box-content">21%</p>
+                        </div>
+                    </div>
+
                 </div>
-                <p>Red - Online</p>
-                <div>
-                    <p>1000</p>
-                    <p> | </p>
-                    <p>100%</p>
-                </div>
-                <p>Yellow - Media</p>
-                <div>
-                    <p>1000</p>
-                    <p> | </p>
-                    <p>100%</p>
-                </div>
-                <p>Blue - Unknown</p>
-                <div>
-                    <p>1000</p>
-                    <p> | </p>
-                    <p>100%</p>
-                </div>
+
+
             </div>
 
 
